<resources>
    <string name="app_name">Math_And_Go_Assignment</string>
    <string name="scores_tracker">Scores Tracker</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="label_total">Total</string>
    <string name="label_math">Math</string>
    <string name="label_chemistry">Chemistry</string>
    <string name="label_physics">Physics</string>
    <string name="label_test_series">Test Series:</string>
    <string name="sample_score">95/100</string>
    <string name="label_delete">Delete</string>
    <string name="label_edit_score">Edit Score</string>
    <string name="sample_00">00</string>
    <string name="label_full_score">Full Score</string>
    <string name="label_your_score">Your Score</string>
    <string name="label_save">Save</string>
    <string name="label_add_test_score">Add Test Score</string>
    <string name="label_add_nta_abhyas_or_other_test_scores">Add NTA Abhyas or other test scores</string>
    <string name="label_enter_test_name">Enter Test Name</string>
    <string name="label_taken_on">Taken On</string>
    <string name="_2021_jan_12">2021 Jan 12</string>
    <string name="sample_test_series_9">sample test series 9</string>
    <string name="other_series">Other Series</string>
    <string name="test_series">Test Series</string>
    <string name="test_name">Test Name</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="subject">Subject:</string>
    <string name="chemistry">Chemistry</string>
    <string name="_100">100</string>
    <string name="your_email_gmail_com">your_email@gmail.com</string>
    <string name="add_test_score">Add Test Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_text_series">Select Text Series</string>
    <string name="done">Done</string>
    <string name="no_test_scores_found">No Test Scores Found!</string>
</resources>