<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.summer.math_and_go_assignment.viewmodel.RegisterViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.RegisterActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_email"
            style="@style/text_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="128dp"
            android:text="@string/e_mail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_email"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rr_12_border"
            android:hint="@string/your_email_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@={model.emailAddress}"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:onClick="@{() ->model.onRegisterClick()}"
            android:text="@string/register" />
    </RelativeLayout>
</layout>